# Event-Scanner

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: benchmarks.yml  check.yml  pr_benchmarks_run.yml  pr_benchmarks_track.yml  publish.yml  scorecard.yml  test.yml
benches/: Cargo.toml
benches/benches/: historic_scanning.rs  latest_events_scanning.rs
benches/dumps/: state_100000.metadata.json
benches/src/: lib.rs
examples/historical_scanning/: main.rs
examples/latest_events_load_test/: Cargo.toml  main.rs
examples/latest_events_scanning/: main.rs
examples/live_scanning/: main.rs
examples/sync_from_block_scanning/: main.rs
examples/sync_from_latest_scanning/: main.rs
src/: block_range_scanner.rs  error.rs  lib.rs  logging.rs  types.rs
src/block_range_scanner/: builder.rs  common.rs  mod.rs  range_iterator.rs  reorg_handler.rs  rewind_handler.rs  ring_buffer.rs  scanner.rs  sync_handler.rs
src/event_scanner/: handle.rs  listener.rs  message.rs  mod.rs  stream.rs  subscription.rs
src/event_scanner/scanner/: common.rs  historic.rs  latest.rs  live.rs  mod.rs
src/event_scanner/scanner/sync/: from_block.rs  from_latest.rs  mod.rs
src/robust_provider/: builder.rs  mod.rs  provider.rs  provider_conversion.rs  subscription.rs
src/test_utils/: macros.rs
tests/: block_range_scanner.rs  channel_state.rs
tests/common/: setup_scanner.rs
tests/historic/: basic.rs
tests/latest_events/: basic.rs  mod.rs  reorg.rs
tests/live/: basic.rs  optional_fields.rs  performance.rs  reorg.rs
tests/sync/: from_block.rs  from_latest.rs
