[package]
name = "latest_events_load_test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "latest_events_load_test"
path = "main.rs"

[dependencies]
alloy.workspace = true
alloy-node-bindings.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
event-scanner = { path = "../.." }
